# crewai-streamlit-news-portal

./: agents.yaml  crew.py  main.py  mkdocs.yml  pyproject.toml  tasks.yaml
docs/: index.md
src/news_portal/: crew.py  main.py
src/news_portal/config/: agents.yaml  tasks.yaml
